--- a/sections/03-design.tex
+++ b/sections/03-design.tex
@@ -13,6 +13,13 @@
 \epigraph{You see a wile, you thwart. Am I right?}%
 {\textsc{---terry pratchett and neil gaiman}\\\textit{Good Omens}}
 
+% TODO: introduction paragraph?
+
+% This chapter introduces some basic ideas necessary to understand the design and
+% implementation of Accelerate, our parallel array programming language. This
+% chapter introduces parallelism and programming graphics processors for general
+% purpose applications, before introducing the Accelerate language.
+
 
 \section{Data Parallelism}
 \label{sec:data_parallelism}
